grammar.js
    source_file: $ => seq(
      repeat(choice(
        seq($._statement, optional($.comment), $._terminator),
        seq($.comment, $._terminator),
        $._terminator,
      )),
      optional(choice(seq($._statement, optional($.comment)), $.comment)),
    ),

    _terminator: $ => choice($._newline, ';'),
    line_continuation: _ => token(seq('\\', /\r?\n/)),
    comment: _ => token(seq('#', /[^\n]*/)),

    _statement: $ => choice(
      $.if_statement,
      $.foreach_statement,
      $.while_statement,
      $.switch_statement,
      $.goto_statement,
      $.onintr_statement,
      $.break_statement,
      $.continue_statement,
      $.breaksw_statement,
      $.at_statement,
      $.quick_substitution_statement,
      $.label,
      $.command_list,
    ),

    command_list: $ => prec(-1, seq(
      $.and_or_command,
      repeat(seq('&', $.and_or_command)),
      optional('&'),
    )),

    and_or_command: $ => seq(
      $.and_command,
      repeat(seq('||', $.and_command)),
    ),

    and_command: $ => seq(
      $.pipeline,
      repeat(seq('&&', $.pipeline)),
    ),

    pipeline: $ => seq(
      $.command,
      repeat(seq(choice('|', '|&'), $.command)),
    ),

    command: $ => choice(
      $.parenthesized_command,
      $.source_statement,
      $.set_statement,
      $.exit_statement,
      $.alias_statement,
      alias($._one_line_if_statement, $.if_statement),
      $.repeat_statement,
      $.simple_command,
    ),

    parenthesized_command: $ => prec.right(seq(
      '(',
      repeat(choice($._terminator, $.comment)),
      $._statement,
      repeat(choice($._statement, $._terminator, $.comment)),
      ')',
      repeat($.redirection),
    )),

    simple_command: $ => prec.right(seq(
      repeat(field('redirection', $.redirection)),
      field('name', $.word),
      repeat(choice(
        field('argument', choice($.word, $.reserved_argument_word)),
        field('redirection', $.redirection),
      )),
    )),

    set_statement: $ => prec.right(seq(
      field('command', $.set_command),
      repeat(choice($.set_assignment, $.word, $.redirection)),
    )),

    set_assignment: $ => prec.right(seq(
      field('name', $.identifier),
      optional($.subscript),
      '=',
      optional(choice(field('value', $.word), field('value', $.parenthesized_word_list))),
    )),

    source_statement: $ => prec.right(seq(
      field('command', $.source_command),
      optional(field('option', $.source_option)),
      field('target', $.source_target),
      repeat(choice(
        field('argument', choice($.word, $.reserved_argument_word)),
        field('redirection', $.redirection),
      )),
    )),

    source_target: $ => $.word,
    source_option: _ => token('-h'),

    exit_statement: $ => prec.right(seq(
      field('command', $.exit_command),
      optional(field('value', $.expression)),
    )),

    set_command: _ => 'set',
    source_command: _ => 'source',
    exit_command: _ => 'exit',

    parenthesized_word_list: $ => seq('(', repeat(choice($.word, $.comment, $._terminator)), ')'),

    redirection: $ => choice(
      $.heredoc_redirect,
      seq(field('operator', $.redirect_operator), field('destination', $.word)),
    ),
    heredoc_redirect: $ => seq(
      field('operator', alias($._heredoc_operator, $.redirect_operator)),
      field('destination', $.heredoc_delimiter),
      $._newline,
      optional(field('body', $.heredoc_body)),
      field('end', $.heredoc_end),
    ),
    _newline: _ => token(/\r?\n/),
    _block_header_end: $ => seq(optional($.comment), $._newline),
    _block_line: $ => choice(
      $._newline,
      seq($.comment, $._newline),
      seq(
        $._statement,
        repeat(seq(';', $._statement)),
        optional(';'),
        optional($.comment),
        $._newline,
      ),
    ),

    if_statement: $ => prec.right(seq(
      'if', '(', optional(field('condition', $.expression)), ')', 'then', $._block_header_end,
      repeat(field('body', $._block_line)),
      repeat(field('alternative', $.else_if_clause)),
      optional(field('alternative', $.else_clause)),
      'endif',
    )),
    _one_line_if_statement: $ => prec.right(seq(
      'if', '(', optional(field('condition', $.expression)), ')',
      field('body', $.command),
    )),
    else_if_clause: $ => prec(2, prec.right(seq(
      'else', 'if', '(', optional(field('condition', $.expression)), ')', 'then', $._block_header_end,
      repeat(field('body', $._block_line)),
    ))),
    else_clause: $ => prec(1, prec.right(seq(
      'else', $._block_header_end,
      repeat(field('body', $._block_line)),
    ))),

    foreach_statement: $ => seq(
      'foreach', field('variable', $.identifier), '(', repeat(field('subject', $.word)), ')', $._block_header_end,
      repeat(field('body', $._block_line)),
      'end',
    ),
    while_statement: $ => seq(
      'while', '(', optional(field('condition', $.expression)), ')', $._block_header_end,
      repeat(field('body', $._block_line)),
      'end',
    ),
    switch_statement: $ => seq(
      'switch', '(', optional(field('subject', $.word)), ')', $._block_header_end,
      repeat(field('body', choice($.case_clause, $.default_clause, $._block_line))),
      'endsw',
    ),
    case_clause: $ => prec.right(seq(
      'case', field('pattern', $.word), token.immediate(':'), $._block_header_end,
      repeat($._block_line),
    )),
    default_clause: $ => prec.right(seq(
      'default', token.immediate(':'), $._block_header_end,
      repeat($._block_line),
    )),
    repeat_statement: $ => prec.right(seq(
      'repeat', field('count', $.word),
      field('body', choice($.source_statement, $.set_statement, $.simple_command)),
    )),
    goto_statement: $ => seq('goto', field('target', $.word)),
    label: $ => seq(field('name', $.label_name), token.immediate(':')),
    breaksw_statement: _ => 'breaksw',

    at_statement: $ => prec.right(3, choice(
      $._bare_at,
      seq(
        $._at_prefix,
        field('name', $.identifier),
        optional($.subscript),
        choice(
          $.update_operator,
          seq($.assignment_operator, field('value', $.expression)),
        ),
      ),
    )),

    assignment_operator: _ => choice('=', '+=', '-=', '*=', '/=', '%=', '<<=', '>>=', '&=', '^=', '|='),
    expression: $ => choice(
      $.number,
      alias($._expression_word, $.word),
      $.parenthesized_expression,
      $.command_status_expression,
      $.file_test_expression,
      $.unary_expression,
      $.binary_expression,
    ),

    _expression_word: $ => prec.right(seq(
      choice(
        $.identifier,
        $.bare_word,
        $.single_quoted_string,
        $.dollar_single_quoted_string,
        $.double_quoted_string,
        $.backtick_command_substitution,
        $.variable_substitution,
        $.literal_dollar,
        $.history_substitution,
        $.glob_pattern,
        $.directory_stack_reference,
        $.job_spec,
      ),
      repeat(immediateWordFragment($, false)),
    )),

    file_test_expression: $ => prec(PREC.PREFIX, seq(
      field('operator', $.file_test_operator),
      field('operand', $.word),
    )),
    file_test_operator: _ => token(prec(5, /-[rwxXeozsfdlbcpSugktRLAMCDIFNPUGZ]+[0-7]*:?/)),
    unary_expression: $ => prec(PREC.PREFIX, seq(
      field('operator', choice('!', '~', '+', '-')),
      field('operand', $.expression),
    )),
    binary_expression: $ => choice(
      ...[
        ['||', PREC.OR], ['&&', PREC.AND], ['|', PREC.BIT_OR], ['^', PREC.BIT_XOR], ['&', PREC.BIT_AND],
        ['==', PREC.EQUALITY], ['!=', PREC.EQUALITY], ['=~', PREC.EQUALITY], ['!~', PREC.EQUALITY],
        ['<', PREC.RELATIONAL], ['<=', PREC.RELATIONAL], ['>', PREC.RELATIONAL], ['>=', PREC.RELATIONAL],
        ['<<', PREC.SHIFT], ['>>', PREC.SHIFT], ['+', PREC.ADD], ['-', PREC.ADD],
        ['*', PREC.MULTIPLY], ['/', PREC.MULTIPLY], ['%', PREC.MULTIPLY],
      ].map(([operator, precedence]) => prec.left(precedence, seq(
        field('left', $.expression),
        field('operator', operator),
        field('right', $.expression),
      )))
    ),

    word: $ => prec.right(seq(
      $._word_fragment,
      repeat($._immediate_word_fragment),
    )),

    _word_fragment: $ => choice(
      $.identifier,
      $.number,
      $.bare_word,
      $.escape_sequence,
      $.single_quoted_string,
      $.dollar_single_quoted_string,
      $.double_quoted_string,
      $.backtick_command_substitution,
      $.variable_substitution,
      $.literal_dollar,
      $.history_substitution,
      $.literal_bang,
      $.brace_pattern,
      $.glob_pattern,
      $.directory_stack_reference,
      $.job_spec,
    ),

    _immediate_word_fragment: $ => immediateWordFragment($, true),

    bare_word: _ => token(prec(-1, /[^\s#;|&<>(){}'"`$!\\*?]+/)),
    identifier: _ => /[A-Za-z_][A-Za-z0-9_]*/,
    number: _ => /[0-9]+/,
    double_quoted_string: $ => seq('"', repeat(choice(token(/[^"\\$`!\n]+/), $.escape_sequence, $.variable_substitution, $.literal_dollar, $.history_substitution, $.backtick_command_substitution)), token.immediate('"')),
    backtick_command_substitution: $ => seq(
      $._backtick_start,
      repeat(choice($._statement, $._terminator, $.comment)),
      $._backtick_end,
    ),
    variable_substitution: $ => prec.right(6, seq('$', choice(
      $._modifiable_variable_reference,
      $._nonmodifiable_variable_reference,
      seq(token.immediate('{'), choice($._modifiable_variable_reference, $._nonmodifiable_variable_reference), token.immediate('}')),
    ))),
    _modifiable_variable_reference: $ => prec.right(seq(
      choice(
        field('name', alias($._immediate_identifier, $.identifier)),
        field('name', alias($._immediate_number, $.number)),
        field('special', alias(token.immediate('*'), $.special_parameter)),
      ),
      optional(field('selector', $.subscript)),
      repeat(field('modifier', $.substitution_modifier)),
    )),
    _nonmodifiable_variable_reference: $ => choice(
      prec(2, seq(
        field('operator', alias(token.immediate(/[?#%]/), $.special_parameter)),
        field('name', choice(alias($._immediate_identifier, $.identifier), alias($._immediate_number, $.number))),
      )),
      prec(1, field('special', alias(token.immediate(choice('?<', /[?$!<_#]/)), $.special_parameter))),
    ),
    special_parameter: _ => token(choice('?<', /[?$!<_#*]/)),
    glob_pattern: _ => token(/\^?[A-Za-z0-9_.\/-]*([*?]|\[[^\]\s\n]+\])[A-Za-z0-9_.\/*?\[\]-]*/),
    brace_pattern: $ => bracePattern($, '{'),
