test/corpus/release_regressions.txt
==================
release regressions: recursive brace words
==================
echo "$HOME/."{,r,ssh/known_}hosts*
echo {-d,--{de,un}compress}
echo a{b,{c,d}}e {a,b}.c
echo pre"$USER"{left,{mid,{deep,down}tail}end}post*
---

(source_file
  (command_list
    (and_or_command
      (and_command
        (pipeline
          (command
            (simple_command
              (word
                (identifier))
              (word
                (double_quoted_string
                  (variable_substitution
                    (identifier)))
                (brace_pattern
                  (bare_word)
                  (bare_word))
                (glob_pattern))))))))
  (command_list
    (and_or_command
      (and_command
        (pipeline
          (command
            (simple_command
              (word
                (identifier))
              (word
                (brace_pattern
                  (bare_word)
                  (bare_word)
                  (brace_pattern
                    (bare_word)
                    (bare_word))
                  (bare_word)))))))))
  (command_list
    (and_or_command
      (and_command
        (pipeline
          (command
            (simple_command
              (word
                (identifier))
              (word
                (identifier)
                (brace_pattern
                  (bare_word)
                  (brace_pattern
                    (bare_word)
                    (bare_word)))
                (bare_word))
              (word
                (brace_pattern
                  (bare_word)
                  (bare_word))
                (bare_word))))))))
  (command_list
    (and_or_command
      (and_command
        (pipeline
          (command
            (simple_command
              (word
                (identifier))
              (word
                (identifier)
                (double_quoted_string
                  (variable_substitution
                    (identifier)))
                (brace_pattern
                  (bare_word)
                  (brace_pattern
                    (bare_word)
                    (brace_pattern
                      (bare_word)
                      (bare_word))
                    (bare_word))
                  (bare_word))
                (glob_pattern)))))))))

==================
release regressions: literal bracket words
==================
bindkey ^[^W kill-region
echo file[0-9] file[^0-9]
echo file[abc file]
---

(source_file
  (command_list
    (and_or_command
      (and_command
        (pipeline
          (command
            (simple_command
              (word
                (identifier))
              (word
                (bare_word))
              (word
                (bare_word))))))))
  (command_list
    (and_or_command
      (and_command
        (pipeline
          (command
            (simple_command
              (word
                (identifier))
              (word
                (glob_pattern))
              (word
                (glob_pattern))))))))
  (command_list
    (and_or_command
      (and_command
        (pipeline
          (command
            (simple_command
              (word
                (identifier))
              (word
                (bare_word))
              (word
                (identifier)
                (bare_word)))))))))

==================
release regressions: comments on block headers
==================
if (! $?prompt) then # if header
  echo interactive
else if (0) then # else-if header
  echo no
else # else header
  echo fallback
endif
foreach item (one two) # foreach header
  echo $item
end
while (0) # while header
  echo never
end
switch (x) # switch header
case x: # case header
  breaksw
default: # default header
  breaksw
endsw
---

(source_file
  (if_statement
    (expression
      (unary_expression
        (expression
          (word
            (variable_substitution
              (special_parameter)
              (identifier))))))
    (comment)
    (command_list
      (and_or_command
        (and_command
          (pipeline
            (command
              (simple_command
                (word
                  (identifier))
                (word
                  (identifier))))))))
    (else_if_clause
      (expression
        (number))
      (comment)
      (command_list
        (and_or_command
          (and_command
            (pipeline
              (command
                (simple_command
                  (word
                    (identifier))
                  (word
                    (identifier)))))))))
    (else_clause
      (comment)
      (command_list
        (and_or_command
          (and_command
            (pipeline
              (command
                (simple_command
                  (word
                    (identifier))
                  (word
                    (identifier))))))))))
  (foreach_statement
    (identifier)
    (word
      (identifier))
    (word
      (identifier))
    (comment)
    (command_list
      (and_or_command
        (and_command
          (pipeline
            (command
              (simple_command
                (word
                  (identifier))
                (word
                  (variable_substitution
                    (identifier))))))))))
  (while_statement
    (expression
      (number))
    (comment)
    (command_list
      (and_or_command
        (and_command
          (pipeline
            (command
              (simple_command
                (word
                  (identifier))
                (word
                  (identifier)))))))))
  (switch_statement
    (word
      (identifier))
    (comment)
    (case_clause
      (word
        (identifier))
      (comment)
      (breaksw_statement))
    (default_clause
      (comment)
      (breaksw_statement))))

==================
release regressions: percent-bearing completion words
==================
complete -%* c/%/j/
---

(source_file
  (command_list
    (and_or_command
      (and_command
        (pipeline
          (command
            (simple_command
              (word
                (identifier))
              (word
                (bare_word)
                (glob_pattern))
              (word
                (bare_word)))))))))

==================
release regressions: continued multiline backticks
==================
set hosts=( \
  `echo \
    one \
  ` \
)
---

(source_file
  (command_list
    (and_or_command
      (and_command
        (pipeline
          (command
            (set_statement
              (set_command)
              (set_assignment
                (identifier)
                (parenthesized_word_list
                  (line_continuation)
                  (word
                    (backtick_command_substitution
                      (command_list
                        (and_or_command
                          (and_command
                            (pipeline
                              (command
                                (simple_command
                                  (word
                                    (identifier))
                                  (line_continuation)
                                  (word
                                    (identifier))))))))
                      (line_continuation)))
                  (line_continuation))))))))))
